--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -4,7 +4,7 @@
   </h1>
 
   <h2 class="intro__tagline">I'm
-    <span class="name">Govind Raj</span>, a design-minded Embedded systems engineer focused on creating and controlling embedded devices &amp; 
+    <span class="name">Govind Raj</span>, a design-minded Embedded systems engineer focused on creating and controlling embedded devices. 
     <span class="emoji technologist"></span>
   </h2>
 
