--- a/_includes/background.html
+++ b/_includes/background.html
@@ -2,12 +2,10 @@
   <div class="section__title">Background</div>
   <div class="section__content">
     <p>
-      I'm currently an Engineer at
-      <a class="underline-link" href="https://www.upstatement.com/" target="_blank">Upstatement</a> building things for the web with some awesome people. I recently graduated from
-      <a class="underline-link" href="http://www.ccis.northeastern.edu/" target="_blank">Northeastern University</a> after completing three awesome six-month co-ops at
-      <a class="underline-link" href="https://us.mullenlowe.com/" target="_blank">MullenLowe U.S.</a>,
-      <a class="underline-link" href="https://starry.com/" target="_blank">Starry</a>, and
-      <a class="underline-link" href="https://www.apple.com/music/" target="_blank">Apple Music</a>.
+      I'm currently pursuing Embedded system engineering course at
+      <a class="underline-link" href="https://www.lambtoncollege.ca/" target="_blank">Lambton College</a> with gaining lots of experience in embedded field working with awesome people. I recently graduated from
+      <a class="underline-link" href="https://www.mgu.ac.in//" target="_blank">Mahatma Gandhi University</a> after completing 4 year electronics and communication enginneering.
+      
     </p>
 
     <p>
