--- a/_includes/background.html
+++ b/_includes/background.html
@@ -9,14 +9,14 @@
     </p>
 
     <p>
-      As a software engineer, I enjoy bridging the gap between engineering and design &mdash; combining my technical knowledge
-      with my keen eye for design to create a beautiful product. My goal is to always build applications that are scalable
-      and efficient under the hood while providing engaging, pixel-perfect user experiences.
+      As a embedded engineer, I enjoy bridging the gap between engineering and design &mdash; combining my technical knowledge
+      with my keen eye for design and develop. My goal is to get started my career as an embedded system engineer and to use my skills and capabalities 
+      in an efficient and scalable manner to the outside world.
     </p>
 
     <p>
-      <strong>When I'm not in front of a computer screen</strong>, I'm probably snowboarding, cruising around on my penny board,
-      or crossing off another item on my bucket list.
+      <strong>When I'm not in front of a computer screen</strong>, I'm probably watching movies, chatting,
+      or thinking of how to make a better tommorrow.
     </p>
 
     <!-- {% include employment-status.html %} -->
