--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -14,7 +14,7 @@
       <div class="skillz__category">
         <div class="skillz__category__label">MCU</div>
         <ul>
-          {% for framework in site.data.skills.MCU %}
+          {% for MCU in site.data.skills.MCU %}
           <li class="skillz__category__item">{{MCU.item}}</li>
           {% endfor %}
         </ul>
