--- a/_includes/background.html
+++ b/_includes/background.html
@@ -2,7 +2,7 @@
   <div class="section__title">Background</div>
   <div class="section__content">
     <p>
-      I'm currently pursuing Embedded system engineering course at
+      I have completed my two year post graduate diploma in Embedded system engineering design at
       <a class="underline-link" href="https://www.lambtoncollege.ca/" target="_blank">Lambton College</a> with gaining lots of experience in embedded field working with awesome people. I recently graduated from
       <a class="underline-link" href="https://www.mgu.ac.in//" target="_blank">Mahatma Gandhi University</a> after completing 4 year electronics and communication enginneering.
       
