--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -28,6 +28,15 @@
         </ul>
       </div>
       <div class="skillz__category">
+        <div class="skillz__category__label">Cloud</div>
+        <ul>
+          {% for thing in site.data.skills.Cloud %}
+          <li class="skillz__category__item">{{thing.item}}</li>
+          {% endfor %}
+        </ul>
+      </div>
+      </div>
+      <div class="skillz__category">
         <div class="skillz__category__label">Design</div>
         <ul>
           {% for thing in site.data.skills.design %}
