--- a/_includes/switch.html
+++ b/_includes/switch.html
@@ -5,4 +5,5 @@
     <label for="switch" id="toggle">Toggle</label>
   </div>
   <div class="moon"></div>
+   <img src="{{site.baseurl}}/img/circle-cropped (1).png" alt="">
 </div>
