--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -4,8 +4,8 @@
   </h1>
 
   <h2 class="intro__tagline">I'm
-    <span class="name">Govind Raj</span>, a design-minded Embedded systems engineer focused on creating and controlling embedded devices.  <img src="{{site.baseurl}}/img/circle-cropped (1).png" alt="">
-    <span class="emoji technologist"></span>
+    <span class="name">Govind Raj</span>, a design-minded Embedded systems engineer focused on creating and controlling embedded devices.  
+    <span class="emoji technologist"></span>        <img src="{{site.baseurl}}/img/circle-cropped (1).png" alt="">
   </h2>
 
   <h3 class="intro__contact">
