--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -2,7 +2,8 @@
   <h1 class="intro__hello">Hello!
     <span class="emoji wave-hand animated"></span>
   </h1>
- <img src="{{site.baseurl}}/img/circle-cropped (1).png" alt="">
+ <img src="{{site.baseurl}}/img/circle-cropped (1).png" style="float:right; margin:0px 0px 15px 15px; cursor:pointer; cursor:hand; border:0" alt="">
+  
   <h2 class="intro__tagline">I'm
     <span class="name">Govind Raj</span>, a design-minded Embedded systems engineer focused on creating and controlling embedded devices.  
     <span class="emoji technologist"></span>       
