--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -8,7 +8,7 @@
     <span class="name">Govind Raj</span>, a design-minded Embedded systems engineer focused on creating and controlling embedded devices.  
     <span class="emoji technologist"></span>       
   </h2>
-
+ <img src="{{site.baseurl}}/img/circle-cropped (1).png" style="float:right; margin:0px 0px 15px 15px; cursor:pointer; cursor:hand; border:0" alt="">
   <h3 class="intro__contact">
     <span>Get in touch </span>
     <span class="emoji pointer"></span>
