--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -6,9 +6,9 @@
   
   <h2 class="intro__tagline">I'm
     <span class="name">Govind Raj</span>, a design-minded Embedded systems engineer focused on creating and controlling embedded devices.  
-    <span class="emoji technologist"></span>       
+    <span class="emoji technologist"></span>        <img src="{{site.baseurl}}/img/circle-cropped (1).png" style="float:right; " alt="">
   </h2>
- <img src="{{site.baseurl}}/img/circle-cropped (1).png" style="float:right; " alt="">
+
   <h3 class="intro__contact">
     <span>Get in touch </span>
     <span class="emoji pointer"></span>
