--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -6,7 +6,7 @@
   
   <h2 class="intro__tagline">I'm
     <span class="name">Govind Raj</span>, a design-minded Embedded systems engineer focused on creating and controlling embedded devices.  
-    <span class="emoji technologist"></span>        <img src="{{site.baseurl}}/img/circle-cropped (1).png" style="float:right; " alt="">
+    <span class="emoji technologist"></span>        
   </h2>
 
   <h3 class="intro__contact">
