--- a/_includes/switch.html
+++ b/_includes/switch.html
@@ -6,4 +6,4 @@
   </div>
   <div class="moon"></div>
 </div>
-
+<img src="{{site.baseurl}}/img/circle-cropped (1).png" style="float:right; " alt="">
