--- a/_includes/background.html
+++ b/_includes/background.html
@@ -13,6 +13,10 @@
       with my keen eye for design and develop. My goal is to get started my career as an embedded system engineer and to use my skills and capabalities 
       in an efficient and scalable manner to the outside world.
     </p>
+    
+    <p>
+        Currenlty I am working as Software/Hardware Quality Technician at Crystal fountains Inc. 
+    </p>
 
     <p>
       <strong>When I'm not in front of a computer screen</strong>, I'm probably watching movies, chatting,
